--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -13,7 +13,9 @@
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
+        android:background="@color/background"
+        app:tabPaddingStart="-1dp"
+        app:tabPaddingEnd="-1dp"
         app:tabGravity="fill" />
 
     <android.support.v4.view.ViewPager
