--- a/app/src/main/res/layout/fragment_entertainment.xml
+++ b/app/src/main/res/layout/fragment_entertainment.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Ce fichier XML défini le contenu du fragment FragmentBusiness -->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.FragmentBusiness">
+    tools:context=".fragments.FragmentEntertainment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/business_recyclerview"
+        android:id="@+id/entertainment_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/background" />
 
-</LinearLayout>
+</FrameLayout>
